@@ -1,11 +1,11 @@
 #header a {
  pointer-events: none;
 }
-
+/*
 html, body, tr, p, div, li, input, ul, .x-btn-text, .x-tip .x-tip-body, select, .x-menu-list-item, .x-btn button, #ctrlPlaytimeCollapsed, #ctrlCurrentSongInfoCollapsed, #ctrlCurrentSongInfoCollapsed a {
  font-size: 14px;
 }
 
 .x-window-tl .x-window-header {
  font: bold 12px tahoma, arial, verdana, sans-serif;
-}
+}*/
